[gd_scene load_steps=15 format=3 uid="uid://s6i8dtxlp5yq"]

[ext_resource type="Script" path="res://Scripts/UI & Camera/PauseController.gd" id="1_ntrch"]
[ext_resource type="Texture2D" uid="uid://dqae1b84nf7dl" path="res://Sprites/Menu/menubuttons.png" id="2_ndyxq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i1p3s"]
atlas = ExtResource("2_ndyxq")
region = Rect2(11, 16, 40, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk8ja"]
atlas = ExtResource("2_ndyxq")
region = Rect2(11, 32, 40, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvh5u"]
atlas = ExtResource("2_ndyxq")
region = Rect2(11, 48, 40, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvotw"]
atlas = ExtResource("2_ndyxq")
region = Rect2(11, 64, 40, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jjdl"]
atlas = ExtResource("2_ndyxq")
region = Rect2(56, 48, 36, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6h7a"]
atlas = ExtResource("2_ndyxq")
region = Rect2(56, 64, 36, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7tt8"]
atlas = ExtResource("2_ndyxq")
region = Rect2(56, 16, 40, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_duntr"]
atlas = ExtResource("2_ndyxq")
region = Rect2(56, 32, 40, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld1al"]
atlas = ExtResource("2_ndyxq")
region = Rect2(61, 81, 3, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erph"]
atlas = ExtResource("2_ndyxq")
region = Rect2(61, 81, 3, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_c34pe"]
atlas = ExtResource("2_ndyxq")
region = Rect2(11, 83, 49, 6)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wb7my"]
texture = SubResource("AtlasTexture_c34pe")
texture_margin_left = 3.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="PauseMenu" type="ColorRect"]
custom_minimum_size = Vector2(170, 195)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -97.5
offset_right = 85.0
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.411765, 0, 0.254902, 1)
script = ExtResource("1_ntrch")

[node name="ButtonBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 5.0
offset_bottom = 73.0
grow_horizontal = 2
scale = Vector2(2, 2)
alignment = 1

[node name="Play" type="HBoxContainer" parent="ButtonBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1

[node name="Play" type="TextureButton" parent="ButtonBox/Play"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_i1p3s")
texture_hover = SubResource("AtlasTexture_xk8ja")

[node name="Save" type="HBoxContainer" parent="ButtonBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1

[node name="Save" type="TextureButton" parent="ButtonBox/Save"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_lvh5u")
texture_hover = SubResource("AtlasTexture_yvotw")

[node name="Load" type="HBoxContainer" parent="ButtonBox/Save"]
layout_mode = 2
alignment = 1

[node name="Load" type="TextureButton" parent="ButtonBox/Save/Load"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_1jjdl")
texture_hover = SubResource("AtlasTexture_b6h7a")

[node name="Quit" type="HBoxContainer" parent="ButtonBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1

[node name="Quit" type="TextureButton" parent="ButtonBox/Quit"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_f7tt8")
texture_hover = SubResource("AtlasTexture_duntr")

[node name="SliderBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = -49.035
offset_right = 67.5
offset_bottom = -33.035
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="HSlider" type="HSlider" parent="SliderBox"]
layout_mode = 2
theme_override_icons/grabber = SubResource("AtlasTexture_ld1al")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_8erph")
theme_override_styles/slider = SubResource("StyleBoxTexture_wb7my")
min_value = -45.0
max_value = 20.0
value = 1.0

[node name="LabelBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.5
offset_top = -31.0
offset_right = 29.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Deaths" type="Label" parent="LabelBox"]
layout_mode = 2
text = "Deaths:"

[connection signal="pressed" from="ButtonBox/Play/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonBox/Save/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ButtonBox/Save/Load/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="ButtonBox/Quit/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="SliderBox/HSlider" to="." method="_on_h_slider_value_changed"]
